vsscala2/code/FirstStep/shoutput/RunREPL2.output

scala> number = 7
<console>:8: error: reassignment to val
       number = 7
              ^
